k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
    volumes: 
        - name: postgres-storage #lays out to request on pod requirements laid out below with accessMode and storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts: #how to mount in container
            - name: postgres-storage #identical to volume name
              mountPath: /var/lib/postgresql/data
              subPath: postgres #data inside container mountPath inside folder in PVC
