k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # ANNOTATION - how copy of Nginx behaves
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            # PATH
            pathType: Prefix
            # PATHTYPE
            backend:
              service:
                # SERVICE FIELDS
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            # PATH
            pathType: Prefix
            # PATHTYPE
            backend:
              service:
                # SERVICE FIELDS
                name: server-cluster-ip-service
                port:
                  number: 5000
